# test

./: README.md  Untitled0.ipynb  aaa.txt  dsada.txt  nowy.txt  pyproject.toml  requirements.txt  test.adoc  test.md  test.py  test2.py  testfile.txt
.github/workflows/: run_test.yml  tests.yml
src/: area.py
src/test.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_area.py
