[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama==0.4.6",
    "coverage-badge~=1.1.0",
    "pandas==2.2.3",
    "pipeline==0.1",
    "pytest==7.2.2",
    "pytest-cov==4.0.0",
    "requests==2.31.0",
    "ruff==0.0.260",
]

# ADD THIS PART:
[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"